overflow fix

--- a/sass/fullish-page-core.scss
+++ b/sass/fullish-page-core.scss
@@ -65,6 +65,7 @@
 			position: sticky;
 			top: 0;
 			height: 100vh;
+			overflow: hidden;
 		}
 
 		.panel {
